# TensorRT-LLM

./: .pre-commit-config.yaml  ATTRIBUTIONS-CPP-aarch64.md  ATTRIBUTIONS-CPP-x86_64.md  ATTRIBUTIONS-Python.md  README.md  requirements.txt  setup.py
.github/workflows/: sonarqube-code-analysis.yml
docker/: Dockerfile.multi
docker/common/: install_cuda_toolkit.sh  install_polygraphy.sh  install_pytorch.sh  install_tensorrt.sh
examples/: constraints.txt
jenkins/: Build.groovy  GenerateLock.groovy  L0_MergeRequest.groovy  L0_Test.groovy  current_image_tags.properties
scripts/: generate_lock_file.py
security_scanning/: metadata.json  pyproject.toml
security_scanning/examples/models/core/qwen/: pyproject.toml
security_scanning/examples/models/core/whisper/: pyproject.toml
security_scanning/triton_backend/: pyproject.toml
tensorrt_llm/: sampling_params.py  version.py
tensorrt_llm/_torch/pyexecutor/: guided_decoder.py  handle_logits.py  llm_request.py
tensorrt_llm/executor/: result.py  worker.py
tensorrt_llm/llmapi/: llm.py
tests/integration/defs/: test_e2e.py
tests/integration/defs/accuracy/: test_cli_flow.py  test_llm_api.py  test_llm_api_pytorch.py
tests/integration/test_lists/qa/: llm_function_full.txt  llm_function_nim.txt  llm_function_sanity.txt
tests/integration/test_lists/test-db/: l0_a100.yml  l0_a30.yml  l0_b200.yml  l0_dgx_b200.yml  l0_dgx_h100.yml  l0_dgx_h200.yml  l0_h100.yml  l0_sanity_check.yml
tests/unittest/: pytest.ini
tests/unittest/_torch/: test_chunked_logits.py
tests/unittest/_torch/modeling/: test_modeling_nemotron_h.py
tests/unittest/llmapi/: test_llm.py  test_llm_pytorch.py
(+2 files in other folders)
