[tool.poetry]
name = "tensorrt-llm"
version = "0.1.0"
description = ""
authors = ["TensorRT LLM [90828364+tensorrt-cicd@users.noreply.github.com]"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
accelerate = ">=0.25.0"
build = "^1.3.0"
colored = "^2.3.1"
cuda-python = ">=12"
diffusers = ">=0.27.0"
lark = "^1.3.0"
mpi4py = "^4.1.1"
numpy = "<2"
onnx = ">=1.18.0"
onnx-graphsurgeon = ">=0.5.2"
openai = "^2.6.0"
polygraphy = "^0.49.26"
psutil = "^7.1.1"
nvidia-ml-py = ">=12"
pynvml = "12.0.0"
pulp = "^3.3.0"
pandas = "^2.3.3"
h5py = "3.12.1"
strenum = "^0.4.15"
sentencepiece = ">=0.1.99"
tensorrt = ">=10.13.0,<10.14.0"
torch = ">=2.8.0a0,<=2.8.0"
nvidia-modelopt = {version = ">=0.33.0,<0.34.0", extras = ["torch"]}
nvidia-cuda-nvrtc = "^13.0.88"
transformers = "4.53.3"
pydantic = ">=2.9.1"
pydantic-settings = {extras = ["yaml"], version = "^2.11.0"}
omegaconf = "^2.3.0"
pillow = "10.3.0"
wheel = "<=0.45.1"
optimum = "^2.0.0"
datasets = "3.1.0"
evaluate = "^0.4.6"
mpmath = ">=1.3.0"
click = "^8.3.0"
click-option-group = "^0.5.9"
aenum = "^3.1.16"
pyzmq = "^27.1.0"
fastapi = "0.115.4"
uvicorn = "^0.38.0"
setuptools = "<80"
ordered-set = "^4.1.0"
peft = "^0.17.1"
einops = "^0.8.1"
xgrammar = "0.1.21"
backoff = "^2.2.1"
nvtx = "^0.2.13"
meson = "^1.9.1"
ninja = "^1.13.0"
etcd3 = "^0.12.0"
blake3 = "^1.0.8"
llguidance = "0.7.29"
soundfile = "^0.13.1"
tiktoken = "^0.12.0"
blobfile = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
